--- a/gb/21/10/4/n13280794.md
+++ b/gb/21/10/4/n13280794.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zwvwgb377/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zwvwgb377/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zwvwgb377/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>青年低薪高流动陷就职困难 学者：多元生涯规划</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13280796-520338-600x400.jpg" />
 <h6>文化大学劳动暨人力资源系教授李健鸿指出，非典型就业市场中，青年就占了30%以上，且不只半工半读的学生，毕业生从事非典型就业的情况也增多。图为示意图。（Getty Images）
 </h6>
 <hr>
-<p>【大纪元2021年10月04日讯】（大纪元记者李怡欣台湾台北报导）次世代<ahref="https://github.com/zwvwgb377/djy/blob/master/gb/tag/%E9%9D%92%E5%B9%B4.md#1">青年</a>人被视为<ahref="https://github.com/zwvwgb377/djy/blob/master/gb/tag/%E4%BD%8E%E8%96%AA.md#1">低薪</a>、穷忙、青贫族，究竟<ahref="https://github.com/zwvwgb377/djy/blob/master/gb/tag/%E9%9D%92%E5%B9%B4.md#1">青年</a>该如何摆脱劣质劳动条件？经民连1日举办“台湾青年劳动市场问题”讲座，邀请文化大学劳动暨人力资源系教授李健鸿，谈论当前台湾青年劳动市场，该如何去破除低薪、失业、非典型就业等弊病。</p>
-<p>文化大学劳动暨人力资源系教授李健鸿1日在线上讲座表示，青年生涯不再是传统“读书、就业、结婚、生子、退休”标准化模式，已出现“YO-YO”现象，“YO-YO”族泛指延毕、出国游学打工、再升学、“靠爸族（不需进入就业市场）”、“尼特族”（不安排就学、不就业、不进修，有能力进入职场但没有寻职行为）等“多样<ahref="https://github.com/zwvwgb377/djy/blob/master/gb/tag/%E7%94%9F%E6%B6%AF%E8%A7%84%E5%88%92.md#1">生涯规划</a>”。</p>
+<p>【大纪元2021年10月04日讯】（大纪元记者李怡欣台湾台北报导）次世代<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9D%92%E5%B9%B4.md#1">青年</a>人被视为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BD%8E%E8%96%AA.md#1">低薪</a>、穷忙、青贫族，究竟<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9D%92%E5%B9%B4.md#1">青年</a>该如何摆脱劣质劳动条件？经民连1日举办“台湾青年劳动市场问题”讲座，邀请文化大学劳动暨人力资源系教授李健鸿，谈论当前台湾青年劳动市场，该如何去破除低薪、失业、非典型就业等弊病。</p>
+<p>文化大学劳动暨人力资源系教授李健鸿1日在线上讲座表示，青年生涯不再是传统“读书、就业、结婚、生子、退休”标准化模式，已出现“YO-YO”现象，“YO-YO”族泛指延毕、出国游学打工、再升学、“靠爸族（不需进入就业市场）”、“尼特族”（不安排就学、不就业、不进修，有能力进入职场但没有寻职行为）等“多样<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%9F%E6%B6%AF%E8%A7%84%E5%88%92.md#1">生涯规划</a>”。</p>
 <h2>非典型就业青年重复失业风险</h2>
-<p>李健鸿指出，80年代起，后工业社会就业市场转以服务业为大宗，相对比较<ahref="https://github.com/zwvwgb377/djy/blob/master/gb/tag/%E4%BD%8E%E8%96%AA.md#1">低薪</a>、非典型就业（打工、派遣、临时工）多，服务业的青年工作者占75%以上，青年初次就业最低薪前五名都是服务业，薪水介于2万5千元~2万7千元之间，例如美容、美发，超商、保全、住宿餐饮、清洁等。</p>
+<p>李健鸿指出，80年代起，后工业社会就业市场转以服务业为大宗，相对比较<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BD%8E%E8%96%AA.md#1">低薪</a>、非典型就业（打工、派遣、临时工）多，服务业的青年工作者占75%以上，青年初次就业最低薪前五名都是服务业，薪水介于2万5千元~2万7千元之间，例如美容、美发，超商、保全、住宿餐饮、清洁等。</p>
 <p>再者，职场劳动保障不完善的非典型就业主力多为青年人。近期“零工经济、平台经济”崛起，如手机平台接单外送，也属非典型就业，但各国已开始质疑并诉讼，认定平台接单是雇佣关系，而非承揽关系，必受劳工法保护。李健鸿提到，非典总就业市场青年就占了30％以上，不只念书打工，“毕业生”非典就业出现暴增，从2011年9万人、占毕业求职比37%，到了2018年增为16万人、占比64%。青年为何总是找打工、特约工作？原因包括找不到正职，或职业特性使然，因此掉进“职涯片段化”不稳定就业困境。</p>
 <p>李健鸿建议，毕业第一份工作不要找“非典型”工作，未来应征雇主恐会贴“能力差、稳定性差”等标签；其次“YO-YO”族，打工度假前要思考好对后来职场有无帮助？不然“出去打工度假3年，回来工作难找，而你的同侪已经升小主管了”。</p>
 <h2>“青年薪资打折”现象 主流观点给青年贴标签</h2>
@@ -26,47 +26,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/20/10/23/n12497158.md#1">低薪症结 台专家：服务业管制太多</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/20/10/30/n12512861.md#1">非法低薪补偿 7-Eleven便利店补发1.7亿元工资</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/20/11/12/n12543877.md#1">挽救服务业低薪 议员提设夜间市长推夜经济</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/21/4/27/n12908533.md#1">盘点劳动五缺 民众党：低薪是国耻</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/21/9/16/n13237858.md#1">报告：纽约市外卖郎低薪高风险</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13662307.md#1">中共军队加大实体演训 台国防部：形成严峻挑战</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13662575.md#1">筹资起跑 目标150万在台重建香港耻辱柱</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13662578.md#1">不满被讽国台办狗腿 蔡衍明兴讼求偿败诉</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13662583.md#1">台民诉法修正案限缩上诉权 民团：缺配套恐酿冤案</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13662586.md#1">铁道局自我监理遭质疑 台交长：拟朝路政司监督</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/23/n12497158.md#1">低薪症结 台专家：服务业管制太多</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/30/n12512861.md#1">非法低薪补偿 7-Eleven便利店补发1.7亿元工资</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/12/n12543877.md#1">挽救服务业低薪 议员提设夜间市长推夜经济</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/27/n12908533.md#1">盘点劳动五缺 民众党：低薪是国耻</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/16/n13237858.md#1">报告：纽约市外卖郎低薪高风险</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13681267.md#1">公务员考绩丁等免职违宪？ 关键在是否侵害司法惩戒权</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13681264.md#1">台湾夺世界杯面包大赛冠军</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13681278.md#1">太鲁阁事故将满周年 时力：五成伤者没签和解书</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13681196.md#1">陆军下士轻生 台监委促国防部究责</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13681201.md#1">拜登将公布国安战略 蓬佩奥再吁承认台湾</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10232283.md#1" target="_blank">北虹：我心中的那道伤痕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/20/n10923009.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（3）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/21/12/10/n13430091.md#1">【百年真相】革命还是暴动？湖南农民运动真相</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/9/n13632327.md#1">【百年真相】逆行的红二代 林立果“讨毛檄文”</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/15/n13646805.md#1">为何说“春分”一刻值千金？</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/17/n13653509.md#1">【未解之谜】用数学公式证明神的存在</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/10/n13635781.md#1">【人生之钥】状元冯京 两娶宰相女三魁天下元</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/20/n13660362.md#1">【器乐独奏与协奏曲】韦伯F大调巴松管协奏曲，作品第75号</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13662831.md#1">专访吴国光：反习派主帅是谁？20大后斗争更烈</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13663333.md#1">【神韵原创音乐】2019 神韵交响乐《大明侍卫》</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/19/n13658674.md#1">【新闻看点】传俄中将司令阵亡 俄军三大失策</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/7/n13626998.md#1">营养师点评：吃九类超级食物 有助长寿</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/18/n13656045.md#1">豆制品抗癌还是致癌？大豆误区一定要知道</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/20/n13660370.md#1">曾志伟承认TVB逾500人确诊 拟实行封闭管理</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/19/n13657215.md#1">《搜救犬露比》影评：警察与狗携手成长 实现警犬梦</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/20/n13660443.md#1">第94届奥斯卡3大变革 力图挽救收视危机</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/20/n13658979.md#1">巴戈、顾宝明接连离世 谭艾珍晒旧照悼念老友</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/19/n13658154.md#1">《坏蛋联盟》影评：改过向善永远不嫌晚！</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/12/n13640944.md#1">蛋白质不仅有助增肌 还有2大好处</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/18/n13656045.md#1">豆制品抗癌还是致癌？大豆误区一定要知道</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/17/n13652676.md#1">蓝莓有7大好处 1吃法摄取最完整花青素</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/18/n13656923.md#1">边吃边瘦2周甩掉6公斤 黄瓜1吃法快速消脂</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/18/n13656885.md#1">【车评】全新日系SAC 2022 Infiniti QX55 Sensory AWD</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zwvwgb377/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zwvwgb377/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/4/n13280794.htm">青年低薪高流动陷就职困难 学者：多元生涯规划</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/4/n13280794.htm">青年低薪高流动陷就职困难 学者：多元生涯规划</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zwvwgb377/djy/blob/master/gb/21/10/4/n13280794.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zwvwgb377/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zwvwgb377/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zwvwgb377/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13280794.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
